Opened 8 years ago

Closed 7 years ago

#13602 closed bug (fixed)

Added repos only activated after restarting Repository prefs

Reported by: humdinger Owned by: perelandra
Priority: normal Milestone: Unscheduled
Component: Preferences/Repositories Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev51276.

When adding the repo http://esmio.de/haiku, enabling doesn't seem to work unless Repositories is restarted. In Terminal it says: "Error: Failed to open repository file "/boot/system/cache/package-repositories/Fishpond Depot": No such file or directory". I do see the file appear in /boot/system/cache/package-repositories/ though...

I'm quite sure it used to work without re-starting Repositories...

Change History (4)

comment:1 by humdinger, 8 years ago

Possibly related: After adding that repo, its name isn't reported as "Unknown", but as "Haiku", which of course already exists. "Enabling" it fails, but after a restart of Repositories, it's enabled and has the correct name "Fishpond Depot".

comment:2 by perelandra, 8 years ago

Thanks for the report, I have an idea. I think you are right the initial "Haiku" name is causing the confusion.

comment:3 by perelandra, 8 years ago

Status: newin-progress

comment:4 by perelandra, 7 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev51311

Note: See TracTickets for help on using tickets.