Repositories bug fix

* Remove code that tries to detect repo name from other existing repos
* Automatically enable repo after it is added
Fixes #13602